--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "3rdparty/sqlite3dbm"]
 	path = 3rdparty/sqlite3dbm
-	url = git@github.com:antigluk/sqlite3dbm.git
+	url = git://github.com/antigluk/pySmartHouse.git
