--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "3rdparty/sqlite3dbm"]
 	path = 3rdparty/sqlite3dbm
 	url = git://github.com/antigluk/pySmartHouse.git
+[submodule "3rdparty/AwesomeChartJS"]
+	path = 3rdparty/AwesomeChartJS
+	url = https://github.com/cyberpython/AwesomeChartJS.git
