--- a/deploy/ssh/config
+++ b/deploy/ssh/config
@@ -2,3 +2,5 @@ Host github.com
     HostName github.com
     User git
     IdentityFile ~/.ssh/smarthouse
+    UserKnownHostsFile=/dev/null
+    StrictHostKeyChecking=no
